[gd_scene load_steps=3 format=3 uid="uid://ckdl7oeja1xgq"]

[ext_resource type="Script" path="res://scenes/entities/Bullet.gd" id="1_0mtds"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n7fgc"]
radius = 4.0

[node name="Bullet" type="Area2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_0mtds")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n7fgc")

[node name="Label" type="Label" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
text = "â€¢"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifetimeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
